--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
   padding: 20px 40px;
   max-width: 1400px;
   margin: 0 auto;
+  gap: 16px;
 }
 
 /*Selector grupal Galeia y imagenes*/
@@ -35,4 +36,12 @@ body {
   width: 100%;
   max-width: 350px;
   height: 300px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+/*Pseudo-Elemento: ::after*/
+.galeria::after {
+  content: "";
+  width: 350px;
 }
